[tool.poetry]
name = "metron-project.github.io"
version = "0.1.0"
description = "The Metron Project website"
authors = ["Brian Pepple <bpepple@metron.cloud>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.7.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
